# AI_training_Basics

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/ai_training/: embedding_service.py  plot.py  semantic_search_demo.py  sentence_transformer_test.py  test_api.py  train_model.py
src/ai_training/templates/: index.html
templates/: index.html  styles.css
