[project]
name = "ai_training"
version = "0.1.0"
description = ""
authors = [
    {name = "Sleepyday",email = "107453007+flyingsalsa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (==2.1.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "ai_training", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
